Fix image hover text alignment

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@
 	}
 
 	.image-backdrop {
-		@apply absolute top-0 bottom-0 h-full w-full flex justify-center items-center bg-slate-700 bg-opacity-60 opacity-0 hover:opacity-100 transition-opacity duration-200 ease-in-out text-white text-2xl;
+		@apply absolute top-0 bottom-0 h-full w-full flex justify-center items-center bg-slate-700 bg-opacity-60 opacity-0 hover:opacity-100 transition-opacity duration-200 ease-in-out text-white text-center text-2xl p-2;
 	}
 }
 
